// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Initially renders correctly 1`] = `
<body>
  <div>
    <form
      class="ui error form"
    >
      <div
        class="required field"
      >
        <label>
          Email Address
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="email"
              placeholder="Enter Email Address"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <button
        class="ui primary button"
        type="submit"
      >
        Login/Register
      </button>
      <div
        class="ui error message"
      />
    </form>
  </div>
</body>
`;

exports[`Renders an error if submitted without an email 1`] = `
<body>
  <div>
    <form
      class="ui error form"
    >
      <div
        class="required field"
      >
        <label>
          Email Address
        </label>
        <div
          class="error field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="email"
              placeholder="Enter Email Address"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="ui error message"
        >
          Please enter an Email Address
        </div>
      </div>
      <button
        class="ui primary button"
        type="submit"
      >
        Login/Register
      </button>
      <div
        class="ui error message"
      />
    </form>
  </div>
</body>
`;

exports[`Renders an error when the Redux Action indicates failure 1`] = `
<body>
  <div>
    <form
      class="ui error form"
    >
      <div
        class="required field"
      >
        <label>
          Email Address
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="email"
              placeholder="Enter Email Address"
              type="text"
              value="graham@grahamcox.co.uk"
            />
          </div>
        </div>
      </div>
      <button
        class="ui primary button"
        type="submit"
      >
        Login/Register
      </button>
      <div
        class="ui error message"
      >
        An unexpected error occurred
      </div>
    </form>
  </div>
</body>
`;

exports[`Renders as loading if submitted with an email 1`] = `
<body>
  <div>
    <form
      class="ui loading form"
    >
      <div
        class="required field"
      >
        <label>
          Email Address
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="email"
              placeholder="Enter Email Address"
              type="text"
              value="graham@grahamcox.co.uk"
            />
          </div>
        </div>
      </div>
      <button
        class="ui primary button"
        type="submit"
      >
        Login/Register
      </button>
      <div
        class="ui error message"
      />
    </form>
  </div>
</body>
`;

exports[`Renders correctly after entering an email address 1`] = `
<body>
  <div>
    <form
      class="ui form"
    >
      <div
        class="required field"
      >
        <label>
          Email Address
        </label>
        <div
          class="field"
        >
          <div
            class="ui fluid input"
          >
            <input
              name="email"
              placeholder="Enter Email Address"
              type="text"
              value="graham@grahamcox.co.uk"
            />
          </div>
        </div>
      </div>
      <button
        class="ui primary button"
        type="submit"
      >
        Login/Register
      </button>
      <div
        class="ui error message"
      />
    </form>
  </div>
</body>
`;
